...

            is AlbumsUiState.Success -> {
                val albums = (uiState as AlbumsUiState.Success).albums
                LazyColumn(
                    modifier = Modifier
                        .padding(paddingValues)
                        .testTag("lista_albumes")
                ) {
                    items(albums) { album ->
                        AlbumItem(album = album, onClick = { onAlbumClick(album.id) })
                    }
                }
            }
...
        },
        modifier = Modifier
            .fillMaxWidth()
            .padding(horizontal = 16.dp)
            .testTag("boton_crear_album"),
    ) {
        Text(text = "CREAR ÁLBUM +")
    }
}

@Composable
fun AlbumItem(album: AlbumDto, onClick: () -> Unit) {
    Card(
...
