package com.example.tsdc.data.model

enum class GenreDto(val value: String) {
    CLASSICAL("Classical"),
    SALSA("Salsa"),
    ROCK("Rock"),
    FOLK("Folk")
}